--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   permission: ^0.1.7
   geolocator: ^5.3.2+2
   geocoder: ^0.2.1
+  firebase_messaging: ^6.0.16
 
 dev_dependencies:
   flutter_test:
