--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  dio: 3.0.9 #save data
+  dio: 3.0.9
   shared_preferences: ^0.5.7+3 #save logged in
   google_maps_flutter: ^0.5.28+1 #google map
   location: ^3.0.2
@@ -36,6 +36,7 @@ dependencies:
   geolocator: ^5.3.2+2
   geocoder: ^0.2.1
   firebase_messaging: ^6.0.16
+  responsive_container:
 
 dev_dependencies:
   flutter_test:
