--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,13 @@ dependencies:
   geocoder: ^0.2.1
   firebase_messaging: ^6.0.16
   responsive_container:
+  json_annotation: ^3.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.0.0
+  json_serializable: ^3.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
